--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -11,6 +11,10 @@
     {
       "question": "hello",
       "answer": "hi"
+    },
+    {
+      "question": "Hi bro",
+      "answer": "Hello bro"
     }
   ]
 }
