--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -15,6 +15,10 @@
     {
       "question": "Hi bro",
       "answer": "Hello bro"
+    },
+    {
+      "question": "Namaste",
+      "answer": "Namaste"
     }
   ]
 }
